--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-know-your-area",
-  "homepage": "http://betterknowyourarea.com",
+  "homepage": "https://test-better-know-your-area.vercel.app/",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -22,7 +22,6 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
